...
                    .trackError(errorTracker)
                    .trackActivity(activityTracker)
                    .asDriver()
            }
            .switchToLatest()
            .sink(receiveValue: {
                let message = AlertMessage(title: "Login successful",
                                           message: "Hello \(input.username). Welcome to the app!",
                                           isShowing: true)
                output.alert = message
            })
            .store(in: cancelBag)
        
...
